sandbox/output
Prescription.java:10: error: cannot find symbol
        return "Prescription dispense date is " + this.dispenseDate + "for " + this.daysSupply + " days";
                                                      ^
  symbol: variable dispenseDate
Prescription.java:10: error: cannot find symbol
        return "Prescription dispense date is " + this.dispenseDate + "for " + this.daysSupply + " days";
                                                                                   ^
  symbol: variable daysSupply
2 errors
